GUI-1217: Adjust topbar breakpoint to prevent wrapping issues

--- a/eucaconsole/static/sass/includes/_eucavariables.scss
+++ b/eucaconsole/static/sass/includes/_eucavariables.scss
@@ -97,7 +97,7 @@ $f-dropdown-triangle-color: #fff;
 // Navigation bar settings ============
 // Breakpoint handling
 $topbar-transition-speed: 300ms;
-$topbar-breakpoint: 920px !default; // Change to 9999px for always mobile layout
+$topbar-breakpoint: 1020px !default; // Change to 9999px for always mobile layout
 // Colors
 $topbar-bg-color: white;
 $topbar-bg: $topbar-bg-color;
